--- a/LectureSept3-4.ipynb
+++ b/LectureSept3-4.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# Example expressions\n",
-    "width//2"
+    "width/2"
    ]
   },
   {
@@ -265,7 +265,18 @@
    "source": [
     "import getpass\n",
     "\n",
-    "actual_age = getpass.getpass(\"How old are you? \")"
+    "real_age = getpass.getpass(\"How old are you really? \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install a new module before importing it\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install ipywidgets"
    ]
   },
   {
@@ -306,7 +317,7 @@
     "else:\n",
     "    <suite>`\n",
     "    \n",
-    "The expressions in the above if and elif statements are called *boolean contexts*. Boolean contexts can include the relational operators `==`, `<`,`>`,`>=`,`=<`, along with the logical operators `and`, `or`, and `not`."
+    "The expressions in the above if and elif statements are called *boolean contexts*. Boolean contexts can include the relational operators `==`,`!=`, `<`,`>`,`>=`,`=<`, along with the logical operators `and`, `or`, and `not`."
    ]
   },
   {
@@ -361,7 +372,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "..."
+    "while True:\n",
+    "    try:\n",
+    "        age = int(input(\"How old are you? \"))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print(\"Oops!  That was not a valid integer.  Try again...\")"
    ]
   }
  ],
